--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2144,7 +2144,7 @@ input, select, textarea {
 			.image.avatar img {
 				border-radius: 100%;
 				width: 100%;
-				length: 100%;
+				height: 100%;
 			}
 
 /* List */
@@ -2187,7 +2187,6 @@ input, select, textarea {
 	dl {
 		margin: 0 0 2em 0;
 	}
-
 
 /* Icons */
 
